changed the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/primereact/resources/themes/lara-light-blue/theme.css"
@@ -14,7 +13,7 @@
     <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>art-assignment</title>
+    <title>Artworks Gallery</title>
   </head>
   <body>
     <div id="root"></div>
